feat:添加缓存开关配置

--- a/deploy/docker/config/interface/msg.yaml.template
+++ b/deploy/docker/config/interface/msg.yaml.template
@@ -1,6 +1,6 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
@@ -23,8 +23,26 @@ redis:
   password: "Hitosea@123.."
 #  protocol: 3
 
+
+cache:
+  enable: true
+
+message_queue:
+  name: "rabbitmq"
+  username: "root"
+  password: "Hitosea@123.."
+  address: "rabbitmq"
+  port: "5672"
+
+push:
+  address: "push"
+  port: "7070"
+  platform_appid:
+    ios: com.hitosea.apptest
+    huawei: xxx.xxx.xxx
+
 http:
-  address: "msg_bff"
+  address: "0.0.0.0"
   port: 8081
 
 grpc:
@@ -33,25 +51,57 @@ grpc:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "msg_bff"
-  address: "consul"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["msg", "bff", "消息服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   msg:
     name: "msg_service"
     address: "msg_service"
     port: "10000"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
+
   relation:
     name: "relation_service"
-    address: "group_service"
-    port: "10001"
+    address: "relation_service"
+    port: 10001
+    #direct: false
+
   user:
     name: "user_service"
     address: "user_service"
-    port: "10002"
+    port: 10002
+    #direct: false
+
   group:
     name: "group_service"
     address: "group_service"
-    port: "10005"
+    port: 10005
+    #direct: false
+
+encryption:
+  enable: false
+  name: coss-im
+  email: max.mustermann@example.com
+  passphrase: LongSecret
+  rsaBits: 2048
+
+multiple_device_limit:
+  enable: false
+  max: 1
