--- a/deploy/docker/config/interface/relation.yaml.template
+++ b/deploy/docker/config/interface/relation.yaml.template
@@ -1,6 +1,6 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
@@ -23,13 +23,16 @@ message_queue:
   address: "rabbitmq"
   port: "5672"
 
+cache:
+  enable: true
+
 dtm:
   name: "dtm"
   address: "dtm"
   port: 36790
 
 http:
-  address: "relation_bff"
+  address: "0.0.0.0"
   port: 8082
 
 grpc:
@@ -38,25 +41,43 @@ grpc:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "relation_bff"
-  address: "consul"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["relation", "bff", "关系服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   user:
     name: "user_service"
     address: "user_service"
     port: "10002"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   relation:
     name: "relation_service"
     address: "relation_service"
     port: "10001"
+    #direct: false
   msg:
     name: "msg_service"
     address: "msg_service"
     port: "10000"
+    #direct: false
   group:
     name: "group_service"
     address: "group_service"
     port: "10005"
+    #direct: false
