--- a/deploy/docker/config/interface/group.yaml.template
+++ b/deploy/docker/config/interface/group.yaml.template
@@ -1,6 +1,6 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
@@ -18,8 +18,8 @@ redis:
 
 message_queue:
   name: "rabbitmq"
-  username: ""
-  password: ""
+  username: "root"
+  password: "Hitosea@123.."
   address: "rabbitmq"
   port: 5672
 
@@ -28,35 +28,89 @@ dtm:
   address: "dtm"
   port: 36790
 
+
+cache:
+  enable: true
+
+oss:
+  minio:
+    name: "minio"
+    address: "minio"
+    port: 9000
+    accessKey: "E003IlrA7X83C5hmS6oV"
+    secretKey: "Ns7lKyU9JWPpQ21L6z6SMOMzx1ZgX2dxFQTRKZcs"
+    ssl: false
+    presignedExpires: ""
+    dial: "3000ms"
+    timeout: "5000ms"
+
+system:
+  environment: "dev" # dev、prod
+  ssl: false # 是否启用ssl true的话不会使用port
+  avatar_file_path:
+  avatar_file_path_dev:
+  gateway_address: "coss.gezi.vip1"
+  gateway_port: 8080
+  gateway_address_dev: "127.0.0.1"
+  gateway_port_dev: 8080
+
+
 http:
-  address: "group_bff"
+  address: "0.0.0.0"
   port: 8084
 
 grpc:
-  address: "group_bff"
-  port:
+  address: "0.0.0.0"
+  port: 10002
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "group_bff"
-  address: "consul"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "registry"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["group", "bff", "群组服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   group:
     name: "group_service"
     address: "group_service"
     port: "10005"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   relation:
     name: "relation_service"
     address: "relation_service"
     port: "10001"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   user:
     name: "user_service"
     address: "user_service"
     port: "10002"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
   msg:
     name: "msg_service"
     address: "msg_service"
     port: "10000"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
