--- a/deploy/docker/config/interface/user.yaml.template
+++ b/deploy/docker/config/interface/user.yaml.template
@@ -1,13 +1,34 @@
+system:
+  environment: "dev" # dev、prod
+  ssl: false # 是否启用ssl true的话不会使用port
+  avatar_file_path: "/.cache/"
+  avatar_file_path_dev:
+  gateway_address: "43.229.28.107"
+  gateway_port: 8080
+  gateway_address_dev: "127.0.0.1"
+  gateway_port_dev: 8080
+
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
+
+email:
+  enable: false
+  smtp_server: "smtp.gmail.com"
+  port: 25
+  username: ""
+  password: ""
+
+
+cache:
+  enable: true
 
 mysql:
   address: "mysql"
   port: 3306
-  dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 redis:
   proto: "tcp"
@@ -16,34 +37,60 @@ redis:
   password: "Hitosea@123.."
 #  protocol: 3
 
+dtm:
+  name: "dtm"
+  address: "dtm"
+  port: 36790
+
 http:
-  address: "user_bff"
+  address: "0.0.0.0"
   port: 8083
 
 grpc:
   address: "0.0.0.0"
-  port: 10003
+  port:
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "user_bff"
-  address: "consul"   # 注册中心地址
-  port: 8500            # 注册中心端口
-  tags: ["user", "bff"]
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
+  tags: ["user", "bff", "用户服务"]
+
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
 
 discovers:
   user:
     name: "user_service"
-    address: "0.0.0.0"
-    port: 10002
+    address: "user_service"
+    port: "10002"
+
+    # 不使用服务发现，使用addr直接连接
+    # 默认为false
+    #direct: false
+
   relation:
     name: "relation_service"
-    address: "0.0.0.0"
-    port: 10001
+    address: "relation_service"
+    port: "10001"
+    #direct: false
 
 encryption:
-  enabled: true
+  enabled: false
   name: coss-im
   email: max.mustermann@example.com
   passphrase: LongSecret
   rsaBits: 2048
+
+multiple_device_limit:
+  enable: false
+  max: 1
