--- a/deploy/docker/config/service/user.yaml.template
+++ b/deploy/docker/config/service/user.yaml.template
@@ -1,13 +1,23 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
 mysql:
   address: "mysql"
-  port: 3306
-  dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  port: 33066
+  username: "root"
+  password: "888888"
+  database: "coss"
+  opts:
+    allowNativePasswords: "true"
+    timeout: "800ms"
+    readTimeout: "200ms"
+    writeTimeout: "800ms"
+    parseTime: "true"
+    loc: "Local"
+    charset: "utf8mb4"
 
 redis:
   proto: "tcp"
@@ -17,13 +27,23 @@ redis:
 #  protocol: 3
 
 grpc:
-  address: "user_service"
+  address: "0.0.0.0"
   port: 10002
 
 # 注册本服务
 register:
+  # 服务注册名称
   name: "user_service"
-  address: "registry"   # 注册中心地址
-  port: 8500            # 注册中心端口
+
+  # 注册中心地址
+  address: "consul"
+
+  # 注册中心端口
+  port: 8500
+
   tags: ["user", "service", "用户服务"]
 
+  # 启用服务发现 默认为true
+  #discover: true
+  # 启用服务注册 默认为true
+  #register: true
