--- a/deploy/docker/config/common/consul.json.template
+++ b/deploy/docker/config/common/consul.json.template
@@ -1,6 +1,6 @@
 {
   "acl": {
-    "enabled": true,
+    "enabled": false,
     "default_policy": "deny",
     "enable_token_persistence": true,
     "tokens": {
@@ -8,6 +8,5 @@
       "default": "",
       "master": ""
     }
-  },
-  "acl_token": ""
+  }
 }
