--- a/admin/config/config.yaml
+++ b/admin/config/config.yaml
@@ -7,7 +7,7 @@ admin:
 system:
   environment: "dev" # dev、prod
   avatar_file_path: "/.cache/"
-  avatar_file_path_dev:
+  avatar_file_path_dev: "/.cache/"
   gateway_address: "43.229.28.107"
   gateway_port: 8080
   gateway_address_dev: "127.0.0.1"
@@ -39,7 +39,17 @@ log:
 mysql:
   address: "mysql"
   port: 33066
-  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  username: "root"
+  password: "Hitosea@123.."
+  database: "coss"
+  opts:
+    allowNativePasswords: "true"
+    timeout: "800ms"
+    readTimeout: "200ms"
+    writeTimeout: "800ms"
+    parseTime: "true"
+    loc: "Local"
+    charset: "utf8mb4"
 
 redis:
   proto: "tcp"
@@ -65,8 +75,8 @@ oss:
     name: "minio"
     address: "minio"
     port: 9000
-    accessKey: "E003IlrA7X83C5hmS6oV"
-    secretKey: "Ns7lKyU9JWPpQ21L6z6SMOMzx1ZgX2dxFQTRKZcs"
+    accessKey: "root"
+    secretKey: "Hitosea@123.."
     ssl: false
     presignedExpires: ""
     dial: "3000ms"
