--- a/deploy/docker/config/interface/gateway.yaml.template
+++ b/deploy/docker/config/interface/gateway.yaml.template
@@ -1,6 +1,6 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
@@ -24,19 +24,24 @@ discovers:
     name: "user_bff"
     address: "user_bff"
     port: 8083
+    direct: true
   relation:
     name: "relation_bff"
     address: "relation_bff"
     port: 8082
+    direct: true
   msg:
     name: "msg_bff"
     address: "msg_bff"
     port: 8081
+    direct: true
   group:
     name: "group_bff"
     address: "group_bff"
     port: 8084
+    direct: true
   storage:
     name: "storage_bff"
     address: "storage_bff"
     port: 8085
+    direct: true
