--- a/deploy/docker/config/interface/group.yaml.template
+++ b/deploy/docker/config/interface/group.yaml.template
@@ -7,7 +7,7 @@ log:
 mysql:
   address: "mysql"
   port: 3306
-  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  dsn: "root:Hitosea@123..@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 redis:
   proto: "tcp"
@@ -37,15 +37,15 @@ oss:
     name: "minio"
     address: "minio"
     port: 9000
-    accessKey: "E003IlrA7X83C5hmS6oV"
-    secretKey: "Ns7lKyU9JWPpQ21L6z6SMOMzx1ZgX2dxFQTRKZcs"
+    accessKey: "root"
+    secretKey: "Hitosea@123.."
     ssl: false
     presignedExpires: ""
     dial: "3000ms"
     timeout: "5000ms"
 
 system:
-  environment: "dev" # dev、prod
+  environment: "prod" # dev、prod
   ssl: false # 是否启用ssl true的话不会使用port
   avatar_file_path:
   avatar_file_path_dev:
@@ -85,7 +85,8 @@ discovers:
   group:
     name: "group_service"
     address: "group_service"
-    port: "10005"
+    port: 10005
+    direct: true
 
     # 不使用服务发现，使用addr直接连接
     # 默认为false
@@ -93,24 +94,24 @@ discovers:
   relation:
     name: "relation_service"
     address: "relation_service"
-    port: "10001"
-
+    port: 10001
+    direct: true
     # 不使用服务发现，使用addr直接连接
     # 默认为false
     #direct: false
   user:
     name: "user_service"
     address: "user_service"
-    port: "10002"
-
+    port: 10002
+    direct: true
     # 不使用服务发现，使用addr直接连接
     # 默认为false
     #direct: false
   msg:
     name: "msg_service"
     address: "msg_service"
-    port: "10000"
-
+    port: 10000
+    direct: true
     # 不使用服务发现，使用addr直接连接
     # 默认为false
     #direct: false
