--- a/deploy/docker/config/interface/relation.yaml.template
+++ b/deploy/docker/config/interface/relation.yaml.template
@@ -7,7 +7,7 @@ log:
 mysql:
   address: "mysql"
   port: 3306
-  dsn: "root:888888@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
+  dsn: "root:Hitosea@123..@tcp(mysql:33066)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 redis:
   proto: "tcp"
@@ -18,10 +18,11 @@ redis:
 
 message_queue:
   name: "rabbitmq"
-  username: ""
-  password: ""
+  username: "root"
+  password: "Hitosea@123.."
   address: "rabbitmq"
-  port: "5672"
+  port: 5672
+
 
 cache:
   enable: true
@@ -61,23 +62,22 @@ discovers:
   user:
     name: "user_service"
     address: "user_service"
-    port: "10002"
-
+    port: 10002
     # 不使用服务发现，使用addr直接连接
     # 默认为false
-    #direct: false
+    direct: true
   relation:
     name: "relation_service"
     address: "relation_service"
-    port: "10001"
-    #direct: false
+    port: 10001
+    direct: true
   msg:
     name: "msg_service"
     address: "msg_service"
-    port: "10000"
-    #direct: false
+    port: 10000
+    direct: true
   group:
     name: "group_service"
     address: "group_service"
-    port: "10005"
-    #direct: false
+    port: 10005
+    direct: true
