--- a/deploy/docker/config/interface/storage.yaml.template
+++ b/deploy/docker/config/interface/storage.yaml.template
@@ -1,6 +1,6 @@
 log:
   stdout: true
-  v: -1
+  level: -1
   file: "logs/app.log"
   format: "console" # console、json
 
@@ -10,17 +10,37 @@ mysql:
   dsn: "root:Hitosea@123..@tcp(mysql:3306)/coss?allowNativePasswords=true&timeout=800ms&readTimeout=200ms&writeTimeout=800ms&parseTime=true&loc=Local&charset=utf8mb4"
 
 http:
-  address: "storage_bff"
+  addr: "0.0.0.0"
   port: 8085
 
 oss:
   minio:
     name: "minio"
-    addr: "minio:9000"
-    accessKey: ""
-    secretKey: ""
+    address: "minio"
+    port: 9000
+    accessKey: "root"
+    secretKey: "Hitosea@123.."
     ssl: false
-#    presignedExpires: ""
+    presignedExpires: ""
+    dial: "3000ms"
+    timeout: "5000ms"
+
+system:
+  environment: "prod"
+  ssl: true # 是否启用ssl true的话不会使用port
+  avatar_file_path: "/.cache"
+  avatar_file_path_dev:
+  gateway_address: "coss.gezi.vip"
+  gateway_port: 8080
+  gateway_address_dev: "127.0.0.1"
+  gateway_port_dev: 8080
+
+email:
+    enable: false
+    smtp_server: "smtp.gmail.com"
+    port: 587
+    username: "max.mustermann@example.com"
+    password: "Hitosea@123.."
 
 redis:
   proto: "tcp"
@@ -41,7 +61,9 @@ discovers:
     name: "storage_service"
     address: "storage_service"
     port: 10006
+    direct: true
   gateway:
     name: "gateway"
     address: "gateway"
     port: 8080
+    direct: true
