fix:调整admin与group工作流构建逻辑

--- a/.github/workflows/docker_admin.yml
+++ b/.github/workflows/docker_admin.yml
@@ -44,4 +44,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=admin NAME=admin TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push ACTION=internal NAME=admin TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
