--- a/.github/workflows/docker_group_service.yml
+++ b/.github/workflows/docker_group_service.yml
@@ -43,4 +43,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=service NAME=group TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push ACTION=internal NAME=group TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
