--- a/.github/workflows/docker_storage_service.yml
+++ b/.github/workflows/docker_storage_service.yml
@@ -43,4 +43,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=service NAME=storage TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push ACTION=internal NAME=storage TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
