ci: 更新合并服务后的工作流

--- a/.github/workflows/docker_admin.yml
+++ b/.github/workflows/docker_admin.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - 'pkg/**/*.go'
       - 'docs/admin*.*'
-      - 'admin/**.go'
+      - 'internal/admin/**.go'
 jobs:
   build_admin:
     runs-on: ubuntu-latest
