--- a/.github/workflows/docker_relation_service.yml
+++ b/.github/workflows/docker_relation_service.yml
@@ -8,7 +8,8 @@ on:
        - 'master'
     paths:
       - 'pkg/**/*.go'
-      - 'service/relation/**.go'
+      - 'docs/relation*.*'
+      - 'internal/relation/**.go'
 jobs:
   build_relation_service:
     runs-on: ubuntu-latest
