--- a/.github/workflows/docker_gateway.yml
+++ b/.github/workflows/docker_gateway.yml
@@ -8,7 +8,7 @@ on:
       - 'master'
     paths:
       - 'pkg/**/*.go'
-      - 'interface/gateway/**.go'
+      - 'internal/gateway/**.go'
 jobs:
   build_gateway:
     runs-on: ubuntu-latest
@@ -43,4 +43,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=interface NAME=gateway TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push ACTION=internal NAME=gateway TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
