--- a/.github/workflows/docker_msg_service.yml
+++ b/.github/workflows/docker_msg_service.yml
@@ -8,7 +8,8 @@ on:
        - 'master'
     paths:
       - 'pkg/**/*.go'
-      - 'service/msg/**.go'
+      - 'docs/msg*.*'
+      - 'internal/msg/**.go'
 jobs:
   build_msg_service:
     runs-on: ubuntu-latest
@@ -43,4 +44,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=service NAME=msg TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push ACTION=internal NAME=msg TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
