--- a/.github/workflows/docker_user_service.yml
+++ b/.github/workflows/docker_user_service.yml
@@ -8,7 +8,8 @@ on:
        - 'master'
     paths:
       - 'pkg/**/*.go'
-      - 'service/user/**.go'
+      - 'docs/user*.*'
+      - 'internal/user/**.go'
 jobs:
   build_user_service:
     runs-on: ubuntu-latest
