--- a/.github/workflows/docker_group_service.yml
+++ b/.github/workflows/docker_group_service.yml
@@ -8,6 +8,8 @@ on:
        - 'master'
     paths:
       - 'pkg/**/*.go'
+      - 'docs/group*.*'
+      - 'cmd/group/**.go'
       - 'internal/group/**.go'
 jobs:
   build_group_service:
