--- a/.github/workflows/docker_live_service.yml
+++ b/.github/workflows/docker_live_service.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'pkg/**/*.go'
       - 'docs/live*.*'
+      - 'cmd/live/**.go'
       - 'internal/live/**.go'
 jobs:
   build_live_service:
