--- a/.github/workflows/docker_relation_service.yml
+++ b/.github/workflows/docker_relation_service.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'pkg/**/*.go'
       - 'docs/relation*.*'
+      - 'cmd/relation/**.go'
       - 'internal/relation/**.go'
 jobs:
   build_relation_service:
