--- a/.github/workflows/docker_user_service.yml
+++ b/.github/workflows/docker_user_service.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'pkg/**/*.go'
       - 'docs/user*.*'
+      - 'cmd/user/**.go'
       - 'internal/user/**.go'
 jobs:
   build_user_service:
