--- a/.github/workflows/docker_relation_service.yml
+++ b/.github/workflows/docker_relation_service.yml
@@ -45,4 +45,4 @@ jobs:
           export GOOS=linux
           export ARCH=all
           export REGISTRY=${{ secrets.REGISTRY }}/cossim
-          make docker-build docker-push ACTION=internal NAME=relation TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
+          make docker-build docker-push relation TAG=latest REGISTRY=${{ secrets.REGISTRY }}/cossim
