perf: 优化gateway发现服务

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -112,7 +112,7 @@ services:
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  admin_service:
+  admin:
     container_name: cossim_admin
     image: hub.hitosea.com/cossim/admin
     command:
@@ -127,14 +127,14 @@ services:
       - dtm
       - redis
       - rabbitmq
-      - group_service
-      - relation_service
-      - user_service
-      - msg_service
+      - group
+      - relation
+      - user
+      - msg
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  live_service:
+  live:
     container_name: cossim_live
     image: hub.hitosea.com/cossim/live
     command:
@@ -148,13 +148,13 @@ services:
     depends_on:
       - consul
       - redis
-      - user_service
-      - relation_service
+      - user
+      - relation
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  msg_service:
-    container_name: cossim_msg_service
+  msg:
+    container_name: cossim_msg
     image: hub.hitosea.com/cossim/msg
     command:
       - "--discover"
@@ -170,8 +170,8 @@ services:
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  relation_service:
-    container_name: cossim_relation_service
+  relation:
+    container_name: cossim_relation
     image: hub.hitosea.com/cossim/relation
     command:
       - "--discover"
@@ -187,8 +187,8 @@ services:
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  user_service:
-    container_name: cossim_user_service
+  user:
+    container_name: cossim_user
     image: hub.hitosea.com/cossim/user
     command:
       - "--discover"
@@ -204,8 +204,8 @@ services:
     environment:
       CONSUL_HTTP_TOKEN:
     restart: on-failure
-  group_service:
-    container_name: cossim_group_service
+  group:
+    container_name: cossim_group
     image: hub.hitosea.com/cossim/group
     command:
       - "--discover"
@@ -221,8 +221,8 @@ services:
     restart: on-failure
     volumes:
       - ./config/pgp:/.cache
-  storage_service:
-    container_name: cossim_storage_service
+  storage:
+    container_name: cossim_storage
     image: hub.hitosea.com/cossim/storage
     command:
       - "--discover"
