--- a/internal/relation/Makefile
+++ b/internal/relation/Makefile
@@ -51,9 +51,9 @@ install: ## Install depence go package
 	@go install github.com/favadi/protoc-go-inject-tag@latest
 
 gen: ## generate protobuf file
-	@protoc -I=. --go_out=. --go_opt=module=${PKG} --go-grpc_out=. --go-grpc_opt=module=${PKG} api/v1/*.proto
+	@protoc -I=. --go_out=. --go_opt=module=${PKG} --go-grpc_out=. --go-grpc_opt=module=${PKG} api/grpc/v1/*.proto
 	@go fmt ./...
-	@protoc-go-inject-tag -input=api/v1/*.pb.go
+	@protoc-go-inject-tag -input=api/grpc/v1/*.pb.go
 
 run: # Run Develop server
 	@go run $(MAIN_FILE) --config ./config/config.yaml
