--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -1,5 +1,44 @@
 version: '3.9'
 services:
+  dashboard:
+    container_name: cossim_apisix_dashboard
+    image: apache/apisix-dashboard:latest
+    restart: always
+    volumes:
+      - ./config/common/apisix-dashboard.yaml:/usr/local/apisix-dashboard/conf/conf.yaml:ro
+    depends_on:
+      - etcd
+    ports:
+      - "10000:9000/tcp"
+  apisix:
+    image: apache/apisix
+    container_name: cossim_apisix
+    restart: always
+    volumes:
+      - ./config/common/apisix.yaml:/usr/local/apisix/conf/config.yaml:ro
+    depends_on:
+      - etcd
+    ports:
+      - "9180:9180/tcp"
+      - "8080:9080/tcp"
+      - "9091:9091/tcp"
+      - "7443:9443/tcp"
+      - "9092:9092/tcp"
+  etcd:
+    container_name: cossim_etcd
+    image: bitnami/etcd:3.4.9
+    user: root
+    restart: always
+    volumes:
+      - ./data/var/lib/etcd_data:/etcd_data
+    environment:
+      ETCD_DATA_DIR: /etcd_data
+      ETCD_ENABLE_V2: "true"
+      ALLOW_NONE_AUTHENTICATION: "yes"
+      ETCD_ADVERTISE_CLIENT_URLS: "http://etcd:2379"
+      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
+    ports:
+      - "2379:2379/tcp"
   mysql:
     container_name: cossim_mysql
     image: mysql:5.7
@@ -98,19 +137,6 @@ services:
     ports:
       - "7070:7070"
       - "7071:7071"
-    restart: on-failure
-  gateway:
-    container_name: cossim_gateway
-    image: hub.hitosea.com/cossim/gateway
-    command:
-      - "--discover"
-      - "--remote-config"
-      - "--config-center-addr"
-      - "consul:8500"
-    ports:
-      - "8080:8080"
-    environment:
-      CONSUL_HTTP_TOKEN:
     restart: on-failure
   admin:
     container_name: cossim_admin
