build(compose): compose添加livekit

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -66,6 +66,19 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
+  livekit:
+    image: livekit/livekit-server
+    ports:
+      - "7880:7880"
+      - "7881:7881"
+      - "7882:7882/udp"
+      - "3478:3478/udp"
+    volumes:
+      - ./config/common/livekit.yaml:/livekit.yaml
+    command:
+      - "--config"
+      - "/livekit.yaml"
+      - "--node-ip=127.0.0.1"
   minio:
     image: hub.hitosea.com/cossim/minio
     container_name: cossim_minio
