fix:调整docker-compose文件

--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -138,7 +138,7 @@ services:
       - '8600:8600'
       - '8600:8600/udp'
   hipush:
-    container_name: cossim_push
+    container_name: cossim_hipush
     image: hub.hitosea.com/cossim/hipush
     volumes:
       - ./config/common/hipush.yaml:/config/config.yaml
